path.css
body {
  font-family: sans-serif;
  margin: 0 1rem 0 1rem;
}

h2 {
  color: maroon;
  display: inline-flex;
  margin-bottom: 0rem;
}

hr {
  margin-bottom: 0.7rem;
}

p {
  color: navy
}

/* 
canvas {
  position: absolute;
} */

#tmaPath {
  margin-top: 0.5rem;
}

#appHeader {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin: 0.6rem 0;
}

#appName {
  height: fit-content;
}

/* #loginSpan {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
} */

/* #loginSpan p {
  margin-bottom: 0.3rem;
} */

#boxLogin {
  display: flex;
  justify-content: flex-end;
  width: 15%;
  text-align: right;
  margin-top: 0.5rem;
}

#username {
  margin: auto 0;
  
}

#datasetSelectSpan {
  display: flex;
  flex-direction: row; 
  margin-top: 0.5rem;
}

#datasetSelectSpan p {
  margin-bottom: 0;
}

#datasetSelectDropdown {
  margin: auto 0 auto 1rem;
}

#datasetSelectDropdownBtn {
  padding: 0.3rem 2rem;
}

#datasetSelectDropdownBtn>i {
  margin-left: 1rem;
}

#datasetSelectDropdownDiv {
  width:fit-content;
  min-width: 35vw; 
  max-height: 50vh;
  overflow-y: auto;
}

#datasetSelectDropdownDiv>button {
  width: 100%;
  padding-top: 1rem;
  padding-bottom: 1rem;
  text-align: left;
}

.datasetOptionBtn.selected, .annotationFormat.selected  {
  background: rgba(100,200,255,0.2);
}

#imgInputBtn {
  margin-bottom: 0.8rem;
}

#box-select {
  margin-bottom: 0.8rem;
}

#filePickers {
  display: inline-flex
}

#filePickers>h5 {
  padding: 0.5rem 2rem 0rem 0rem;
}

#filePickers>h6:first-child {
  display: block;
  padding: 0.8rem 2rem 0rem 0rem;
}

#filePickers>h6:not(:first-child) {
  display: block;
  padding: 0.8rem 2rem 0rem 2rem;
}

#filePickers>hr {
  margin-top: 0rem;
}

#imageDiv {
  display: flex;
}

#toolsOuterDiv {
  visibility: hidden;
  display: flex;
  flex-direction: column;
}

#toolsDiv {
  display: flex;
  flex-direction: column;
  height: 100%;
}

#toolsDiv>div:first-child {
  margin-top: 0.5rem;
}

#toolsDiv>div:not(:first-child) {
  margin-top: 1.5rem;
}

.tool {
  display: flex;
  flex-direction: row;
  width: fit-content;
}

.dropdown-menu, .tooltip, .modal {
  z-index: 1000001;
}

.dropdown-toggle {
  height: 100%;
  padding-left:0.2rem;
  padding-right: 0.2rem;
}

.dropdown-menu {
  padding: 0.5rem 0 0 0.5rem;
}

#scrollToZoom {
  position: relative;
  margin-left: 0.5rem;
}

.loaderDiv {
  display: none;
  position: absolute;
  background-color: rgba(220, 220, 220, 0.4);
  z-index: 9999999;
}

.loaderImg {
  position: absolute;
  margin: auto;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

#imgHeader {
  height: 6%;
}

#tmaCanvasParent {
  position: relative;
}

#wsiCanvasParent {
  position: relative;
  background: black;
  width: 100%;
  height: 100%;
  display: none;
}

.wsiControlBtnParent {
  background-color: rgba(0, 0, 0, 0.5);
}

.wsiControlBtnParent:hover {
  background-color: black;
}

.wsiControlBtnParent.active {
  background-color: black;
}

.wsiControlBtnParent.active i {
  color: rgba(100,240,100,1)
}

.wsiControlBtnParent .form-check {
  padding-top: 0.3rem;
  padding-bottom: 0.3rem;
}

.wsiControlBtnParent .form-check>label {
  width: 100%;
  height: 100%;
}

.wsiControlBtnParent .form-check:last-child {
  margin-bottom: 0.5rem;
}

.wsiControlBtnParent .form-check:hover {
  background-color: rgba(190, 190, 255, 0.4);
}

.wsiControlBtn {
  border: none;
  padding: 0;
  width: 51px;
  height: 50px;
  cursor: pointer;
}

.wsiControlBtn>i {
  font-size: 28;
  color: rgba(200, 200, 200, 1);
}

#runModelWSIDropdownDiv {
  width: 12rem;
}

#runModelWSI_moreOptions {
  padding-top:0;
}

#hideAnnotationsDropdownDiv {
  width: 10.5rem;
}

#hideAnnotationsDropdownDiv, #runModelWSIDropdownDiv {
  padding-right: 0.5rem;
}

#hideAnnotationsDropdownDiv>hr, #runModelWSIDropdownDiv>hr {
  margin: 0.3rem 0;
}

#stopWSIModelButtonDiv {
  display: none;
  width: 100%;
  padding: 0;
  margin: 0;
}

#stopWSIModelBtn {
  width: 100%;
  height:100%;
}

#canvasWithPickers {
  position: relative;
}

#canvasWithThumbnails {
  display: flex;
  flex-direction: row;
  height: 100%;
}

#thumbnailPickerParent {
  position: relative;
  width: 7rem;
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

#thumbnailPicker {
  display: flex;
  flex-direction: column;
  position: absolute;
  top: 0;
  right: 0px;
  bottom: 0;
  left: 0;
  z-index: 5;
}

#thumbnailsList {
  overflow-y: auto;
}

#thumbnailPageSelector {
  margin-top: 0.5rem;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  font-size: 11px;
}

/* #imagePicker>ul {
  list-style-type: none;
  list-style-position: unset;
} */

.thumbnailDiv:not(:first-child) {
  margin-top: 0.7rem;
}

.thumbnailDiv {
  display: flex;
  flex-direction: column;
  cursor: pointer;
  align-items:center;
  margin-left: 0.2rem;
  margin-right: 0.2rem;
}

.imagePickerThumbnail {
  width: 5rem;
  height: 5rem;
  border: 1px solid lightpink;
  border-radius: 5px;
}

.annotationsPartlyCompletedThumbnail {
  border: 3px solid #a4d100;
}

.annotationsCompletedThumbnail {
  border: 3px solid rgb(0, 99, 0);
}

.selectedThumbnail {
  border: 2px solid dodgerblue;
}

.imagePickerThumbnailText {
  font-size: 7px;
  width: 85px;
  text-align: center;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

#tabsContainer {
  display: flex;
  flex-direction: column;
  height: 100%;
  border-left: 1px solid lightgray;
}

#tabsContent {
  display: flex;
  width: 100%;
  height: 100%; 
  border-top: 1px solid lightgray;
}

.tabContainer {
  height: 100%;
}

.tabContainerWithMargin {
  margin-top: 0.7rem;
  padding-left: 1.5rem;
  height: calc(100% - 0.7rem)
}

#collaborate>.jumbotron {
  padding-left: 2rem;
  margin-left: 1rem;
  height: fit-content;
}

#tabsList {
  display: flex;
}

#tabs {
  height: fit-content;
  white-space: nowrap;
  flex-wrap: nowrap;
  overflow-x: auto;
  overflow-y: hidden;
}

.nav-item {
  display: inline-block;
  height: fit-content;
}
/* ... */

